Adds shortcodes and un-nests routes for simplicity, refines front-end to clear out unnecessary filler
